# SynapseCLI

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ELI5.md  LICENSE  PHASE_CONTINUATION_PLAN.md  README.md  SECURITY.md  SPEC-SENTINEL.md  SPEC-WATCHER.md  SPEC.md  TOOL_CALLING_SUMMARY.md  debug_test.py  pr21-full-diff.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: help.json
docs/: architecture-host-plugin-split.md  enhanced-help-command.md  help-system-evolution-plan.md  open-provider-issues.md  plugin-setup-scripts.md  sidecar-protocol.md
docs/code-review/: 2026-04-30-local-voice-provider-plan-review.md
docs/extensions/: README.md  contract.json  hooks.md  permissions.md  protocol.md
docs/plans/: 2025-01-27-tmux-native-design.md  2025-01-27-tmux-native-plan.md  2026-04-18-plugins-settings-design.md  2026-04-18-plugins-ui-implementation.md  2026-04-18-settings-menu-design.md  2026-04-18-settings-menu.md  2026-04-18-synaps-skills-plugins-design.md  2026-04-18-synaps-skills-plugins-implementation.md  2026-04-23-plugin-agent-symlinks-design.md  2026-04-23-plugin-agent-symlinks.md  2026-04-24-plugin-keybinds.md  2026-04-27-expanded-model-browser.md  2026-04-27-models-router.md  2026-04-30-local-voice-provider.md  2026-04-30-vm-automation-agent.md  2026-05-01-pre-phase-2-voice-decoupling-checkpoint.md  2026-05-02-voice-integration.md  2026-05-02-whisper-model-manager-and-backends.md  2026-05-03-extension-contracts-for-rich-plugins.md  2026-05-04-deassume-host-phase7.md  2026-05-05-plugin-claimed-namespaces-phase8.md  2026-05-06-shim-removal-phase9.md  event-bus-enhancements.md  extension-install-post-install-hardening-plan.md  kokoros-compatibility-spike.md  voice-sidecar-extension-plan.md
docs/reviews/: 2026-04-20-repo-review.md  dev-branch-review-s184.md  full-review-9cc8b33-to-dev.md  open-pr-reviews-s184.md
docs/specs/: 2026-04-27-expanded-model-browser.md  2026-04-27-extensions-and-hooks.md  2026-04-27-model-routing-dynamic-catalog.md  agent-in-shell-tasks.md  agent-in-shell.md  extension-provider-registration.md  extension-providers.md  local-first-session-memory-index.md  phase-2-local-first-capability-platform.md  phase-i-slice-1-implementation-notes.md  phase-o-provider-ux-distribution.md  plugin-index.md  plugin-signing.md  tdd-scenarios-tasks-1-7.md
examples/extensions/: time-ext.py
src/: agent.rs  auth.rs  chat.rs  chatui.rs  client.rs  cmd_agent.rs  cmd_login.rs  cmd_watcher.rs  compaction.rs  config.rs  error.rs  help.rs  lib.rs  logging.rs  login.rs  main.rs  mcp.rs  protocol.rs  runtime.rs  sentinel.rs  sentinel_types.rs  server.rs  session.rs  skills.rs  toast.rs  tools.rs  watcher.rs  watcher_types.rs
src/chatui/: app.rs  commands.rs  draw.rs  gamba.rs  help_find.rs  helpers.rs  highlight.rs  input.rs  input_event.rs  lifecycle.rs  lightbox.rs  main.rs  markdown.rs  (+10 more)
templates/: index.html
tests/: chatui_viewport.rs  contracts_sync.rs  extension_provider_stream_route.rs  extension_provider_streaming.rs  extension_provider_streaming_transport.rs  extension_provider_tool_loop.rs  extension_provider_tool_use.rs  extensions_config.rs  extensions_contract.rs  extensions_e2e.rs  extensions_info.rs  extensions_memory.rs  extensions_process.rs  extensions_sidecar_spawn_args.rs  help_find_phase6.rs  help_find_state.rs  help_plugin_namespace.rs  help_registry.rs  help_slash_discovery.rs  pi_skills_compat.rs  plugins_manage.rs  shell_pty.rs  sidecar_manager_protocol.rs  skills_plugin.rs  voice_conversation_mode.rs  voice_local_sidecar.rs  voice_manager_sidecar.rs  voice_sidecar_host.rs  voice_sidecar_protocol.rs  voice_sidecar_provider.rs  voice_sidecar_runtime.rs
(+243 files in other folders)
