[package]
name = "agent-runtime"
version = "0.1.0"
edition = "2021"
description = "Minimal agent runtime for LLM execution"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
tokio-stream = "0.1"

[[bin]]
name = "chat"
path = "src/chat.rs"

[[bin]]
name = "server"
path = "src/server.rs"