[package]
name = "synaps-cli"
version = "0.1.0"
edition = "2021"
description = "A terminal-native AI agent runtime"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tachyonfx = "0.9"
syntect = { version = "5", default-features = false, features = ["default-themes", "default-syntaxes", "regex-onig"] }

[[bin]]
name = "chat"
path = "src/chat.rs"

[[bin]]
name = "chatui"
path = "src/chatui.rs"

