[package]
name = "synaps-cli"
version = "0.1.0"
edition = "2021"
authors = ["Haseeb Khalid <haseebkhalid1507@gmail.com>"]
license = "MIT"
description = "A terminal-native AI agent runtime"
repository = "https://github.com/HaseebKhalid1507/SynapsCLI"
homepage = "https://github.com/HaseebKhalid1507/SynapsCLI"
keywords = ["ai", "agent", "terminal", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.80"

[dependencies]
arc-swap = "1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1"
memchr = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tachyonfx = "0.9"
syntect = { version = "5", default-features = false, features = ["default-themes", "default-syntaxes", "regex-onig"] }

# Auth / OAuth deps
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
urlencoding = "2"
url = "2"
fs4 = "0.13"
toml = "0.8"
notify = "6.1"
globset = "0.4"

# Server deps
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.21"
unicode-width = "0.2.0"
arboard = "3"

# Shell / PTY deps
portable-pty = "0.9"
regex = "1"

# Hidden deps
dirs = "5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "synaps"
path = "src/main.rs"

[[bin]]
name = "hidden"
path = "src/bin/hidden/main.rs"


[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
